# radio-toy

./: .gitmodules  README.md  ook-remote  wen3410-off.ook  wen3410-on.ook
c/: .gitignore  CMakeLists.txt  Dockerfile.pico  Todo.md  build.sh  cc1101.h  main.cpp
enclosure/: enclosure-base.stl  enclosure-cover.stl  enclosure.FCStd
rust/: Cargo.toml  build.sh  rust-toolchain.toml
rust/.cargo/: config.toml
rust/src/: command_parser.rs  main.rs  net_ui.rs
