[package]
edition = "2021"
name = "radio-toy"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]

cc1101 = { path = "../submodules/cc1101" }

cyw43 = { path = "../submodules/embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { path = "../submodules/embassy/cyw43-pio", features = ["defmt", "overclock"] }
embassy-embedded-hal = { version = "0.2", path = "../submodules/embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-executor = { version = "0.7", path = "../submodules/embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1" }
embassy-net = { version = "0.5", path = "../submodules/embassy/embassy-net", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-rp = { version = "0.2", path = "../submodules/embassy/embassy-rp",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.4", features = ["defmt"] }
embassy-time = { version = "0.4", path = "../submodules/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb-logger = { version = "0.2", path = "../submodules/embassy/embassy-usb-logger" }
embassy-usb = { version = "0.3", path = "../submodules/embassy/embassy-usb",  features = ["defmt"] }

cortex-m = "0.7"
cortex-m-rt = "0.7"

embedded-hal-02 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.8"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.7"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.9", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"

fixed = "1.23"
fixed-macro = "1.2"

byte-slice-cast = { version = "1.2", default-features = false }
futures = { version = "0.3", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = "0.8"
smart-leds = "0.3"
usbd-hid = "0.8"

embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "2", features = ["nightly"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2"
rand = { version = "0.8.5", default-features = false }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
